--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     <!-- Copyright -->
     <div class="text-center p-3" style="background-color: rgba(214,230,255)" >
       © 2020 Copyright:
-      <p class="love"> Soumya shadangi</p>
+      <p class="love"> Ameya Singh</p>
     </div>
     <!-- Copyright -->
   </footer>
